--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -7,8 +7,11 @@ footer {
 }
 footer img {
   margin: 10px 0 0 0;
-  width: 30%;
+  width: 60%;
   transition: transform 1s;
+  @media screen and (min-width: 550px) {
+    width: 30%;
+  }
 }
 
 footer img:hover {
